idf_component_register(SRCS "main.cpp"
                            "fullnessTask.cpp"
                            "usageTask.cpp"
                            "weightTask.cpp"
                            "wifiTask.cpp"
                            "../lib/hx711/hx711.c"
                            INCLUDE_DIRS "../include"
                                         "../lib"
                                         "../lib/Fullness"
                                         "../lib/Weight"
                                         "../lib/hx711")